--- a/online-shop/src/app/app.component.html
+++ b/online-shop/src/app/app.component.html
@@ -1,4 +1,7 @@
-<div> 
-  <h1> Welcome to {{ title }}! </h1> 
-</div>
-<app-list-of-products></app-list-of-products>
+<h1> Welcome to {{ title }}! </h1> 
+<nav>
+  <a routerLink="/dashboard">Dashboard</a><br>
+  <a routerLink="/list-of-products">Products</a>
+</nav>   
+<router-outlet></router-outlet>
+
