--- a/online-shop/src/app/app.component.html
+++ b/online-shop/src/app/app.component.html
@@ -1,7 +1,9 @@
+
 <h1> Welcome to {{ title }}! </h1> 
 <nav>
   <a routerLink="/dashboard">Dashboard</a><br>
-  <a routerLink="/list-of-products">Products</a>
+  <a routerLink="/list-of-products">Products</a><br>
+  <a routerLink="/shopping-cart">Shopping Cart</a><br>
 </nav>   
 <router-outlet></router-outlet>
 
