--- a/online-shop/src/app/login/login.component.html
+++ b/online-shop/src/app/login/login.component.html
@@ -12,7 +12,7 @@
         </label>    
         <input type="Password" name="Pass" id="pass" placeholder="Password" formControlName="password">    
         <br><br>    
-        <button (click)="logIN()">Log in</button>   
+        <button type="button" name="log" id="log" (click)="logIN()">Log in</button>   
     </form>     
 </div>    
 </body>   
