--- a/online-shop/src/app/product-detail/product-detail.component.html
+++ b/online-shop/src/app/product-detail/product-detail.component.html
@@ -8,9 +8,9 @@
        <span>Description: </span>{{product.description}} <br>
 
   <br>
-  <button (click)="addToCart()">Add to cart</button><br><br>
-  <button> <a routerLink="/product-editor">Edit product</a></button><br><br>
-  <button (click)="deleteProduct()">Delete product</button><br><br><br><br><br><br><br><br><br><br><br><br><br>
+  <button class="button1" (click)="addToCart()">Add to cart</button><br><br>
+  <button class="button1"> <a routerLink="/product-editor">Edit product</a></button><br><br>
+  <button class="button1" (click)="deleteProduct()">Delete product</button><br><br><br><br><br><br><br><br><br><br><br><br><br>
 </div>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -29,5 +29,5 @@
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <button (click)="goBack()">go back</button>
+  <button class="button1" (click)="goBack()">go back</button>
 </div>
