--- a/online-shop/src/app/app.component.scss
+++ b/online-shop/src/app/app.component.scss
@@ -3,6 +3,14 @@ h1
     text-align: center;
     background-color: rgb(193, 246, 255);
   }
+  .hello {
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+    background-color: #068888; 
+    color: white;
+    padding: 32px 16px;
+    align-items: center;
+    margin-left: 730px;
+  }
 
     
 
