--- a/online-shop/src/app/list-of-products/list-of-products.component.scss
+++ b/online-shop/src/app/list-of-products/list-of-products.component.scss
@@ -15,4 +15,7 @@ a.linkd :hover, a.linkd:active {
   color: white;
 }
 
-.button1 {background-color: #72a8b6;font-size: 24px;} 
+a.linkd{
+  margin-bottom:40px;
+}
+.button1 {background-color: #72a8b6;font-size: 24px;  margin-bottom:40px;} 
